# COMP3015-CW2

./: .clangd  .gitignore  CMakeLists.txt  Project_Template.vcxproj  Project_Template.vcxproj.filters  README.md  imgui.ini  main.cpp  run.sh  scenebasic_uniform.cpp  scenebasic_uniform.h  split_tree_objs.py  trianglemesh.h
.zed/: settings.json
ai_transcript/: bulletx_collision_crashing.md  debugging_opengl_header.md  debugging_unused_parameter_window.md  elongation_matrix.md  gaussian_function.md  imgui_questions.md  normal_map_explanation.md  physics_world_questions.md  spotlight_direction_suggestion.md  texture_loading.md  vector_looping.md
core/: crosshair.cpp  crosshair.h  flycamera.cpp  flycamera.h  hud.cpp  hud.h  mesh_instance.cpp  mesh_instance.h  particle_system.cpp  particle_system.h  physics_world.cpp  physics_world.h  post_process.cpp  post_process.h  projectile_system.cpp  projectile_system.h  skybox.cpp  skybox.h  skybox_instance.cpp  skybox_instance.h
glad/include/glad/: glad.h
glad/src/: glad.c
helper/: assimpmesh.cpp  assimpmesh.h  glslprogram.cpp  plane.cpp  scene.h  scenerunner.cpp  scenerunner.h  texture.cpp
helper/stb/: stb_image.cpp
media/models/: model_info.txt  ship.fbx
media/textures/skybox/: skybox_info.txt
shader/: basic_uniform.frag  basic_uniform.vert  blur.vert  blur_horizontal.frag  blur_vertical.frag  crosshair.vert  lighting.frag  lighting.vert  particle.vert  projectile.frag  skybox.frag  skybox.vert  tonemapping.frag  tonemapping.vert
structs/: light.h  material.h
x64/Debug/: Project_Template.exe.recipe  Project_Template.vcxproj.FileListAbsolute.txt
x64/Debug/Project_Template.tlog/: Project_Template.lastbuildstate
x64/Release/media/textures/: texture_info
x64/Release/shader/: blur_horizontal.frag  blur_vertical.frag  crosshair.frag  fullscreen.vert  lighting.vert  particle.frag  passthrough.frag  projectile.vert  skybox.frag  skybox.vert
